# egui_tracing

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: pages.yaml  release-plz.yml  static-analysis.yaml
egui-tracing/: CHANGELOG.md  Cargo.toml
egui-tracing/src/: lib.rs  string.rs
egui-tracing/src/tracing/: collector.rs  event.rs  mod.rs
egui-tracing/src/ui/: color.rs  labels.rs  mod.rs  state.rs
egui-tracing/src/ui/components/: common.rs  constants.rs  level_menu_button.rs  mod.rs  table.rs  table_cell.rs  table_header.rs  target_menu_button.rs  target_menu_item.rs
examples/: eframe.rs
examples/eframe/: Cargo.toml  README.md
examples/eframe-wasm32/: Cargo.toml  Justfile  README.md  index.html  rustfmt.toml
examples/eframe-wasm32/src/: lib.rs  main.rs
examples/eframe/src/: main.rs
examples/multilingual/: Cargo.toml  README.md  rustfmt.toml
examples/multilingual/src/: main.rs
src/: lib.rs  string.rs  time.rs
src/tracing/: collector.rs  event.rs  mod.rs
src/ui/: color.rs  level_menu_button.rs  mod.rs  state.rs  time.rs
src/ui/components/: header_item.rs  level_menu_button.rs  mod.rs  table.rs  table_cell.rs  table_header.rs  target_menu_button.rs  target_menu_item.rs
