[package]
name = "egui_tracing_rs"
description = "Integrates tracing and logging with egui for event collection/visualization"
version = "0.2.2"
authors = ["Grievouz <tammo@ronke.dev>"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/FOSSEC/egui_tracing"
keywords = ["egui", "tracing", "log"]
categories = ["gui", "game-development"]

[features]
default = ["log"]
log = ["tracing-log", "tracing-subscriber/tracing-log"]
wasmbind = ["chrono/wasmbind"]

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
egui = "0.26.2"
globset = { version = "0.4.10", features = ["serde1"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-log = { version = "0.1.3", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
unicode-segmentation = "1.10"

[dev-dependencies]
eframe = "0.26.2"
