[workspace]
resolver = "2"
members = ["egui-tracing", "examples/eframe", "examples/eframe-wasm32"]

[workspace.dependencies]
eframe = { version = "0.34", default-features = false }
egui = { version = "0.34", default-features = false }
egui_extras = { version = "0.34", default-features = false }
tracing = { version = "0.1", default-features = false }
