[package]
name = "egui_tracing"
description = "Integrates tracing and logging with egui for event collection/visualization"
version = "0.2.5"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/grievouz/egui_tracing"
keywords = ["egui", "tracing", "log"]
categories = ["gui", "game-development"]

[features]
default = ["log"]
log = ["tracing-log", "tracing-subscriber/tracing-log"]
wasmbind = ["chrono/wasmbind"]
reexport = []

[dependencies]
chrono = { version = "~0.4.38", default-features = false, features = ["clock"] }
egui.workspace = true
globset = { version = "~0.4.15", features = ["serde1"] }
serde = { version = "~1.0.210", default-features = false, features = ["derive"] }
tracing = { version = "~0.1.40", default-features = false }
tracing-log = { version = "~0.2.0", optional = true, default-features = false }
tracing-subscriber = { version = "~0.3.18", default-features = false, features = ["registry"] }
unicode-segmentation = "~1.12"
