[package]
name = "egui_tracing"
description = "Integrates tracing and logging with egui for event collection/visualization"
version = "0.3.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/grievouz/egui_tracing"
keywords = ["egui", "tracing", "log"]
categories = ["gui", "game-development"]

[features]
default = ["log", "egui-default"]
egui-default = ["egui/default"]
log = ["tracing-log", "tracing-subscriber/tracing-log"]
wasmbind = ["chrono/wasmbind"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
egui = { workspace = true }
egui_extras = { workspace = true }
imbl = "7"
globset = "0.4"
tracing = { workspace = true, default-features = false }
tracing-log = { version = "0.2", optional = true, default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
unicode-segmentation = "1"
