[package]
name = "egui_tracing"
description = "Integrates tracing and logging with egui for event collection/visualization"
version = "0.3.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/grievouz/egui_tracing"
keywords = ["egui", "tracing", "log"]
categories = ["gui", "game-development"]

[features]
default = ["log", "egui-default"]
egui-default = ["egui/default"]
log = ["tracing-log", "tracing-subscriber/tracing-log"]
## Used to be needed use on WASM but no longer needed. Detected by target now
wasmbind = ["chrono/wasmbind"]

[dependencies]
chrono = { workspace = true, features = ["clock"] }
egui = { workspace = true }
egui_extras = { workspace = true }
globset = { workspace = true }
imbl = { workspace = true }
tracing = { workspace = true, default-features = false }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
unicode-segmentation = { workspace = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }
