[package]
name = "example-eframe-wasm32"
version = "0.2.6"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["glow"] }
egui_tracing = { path = "../../egui-tracing", features = [
    "wasmbind",
    "reexport",
] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.70"

[dependencies.getrandom]
version = "*"
features = ["js"]

[features]
default = ["eframe/default"]
