[package]
name = "example-eframe-wasm32"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["glow"] }
egui_tracing = { workspace = true, features = ["wasmbind"] }
getrandom = { version = "*", features = ["js"] }
tracing = { workspace = true, default-features = false }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[features]
default = ["eframe/default"]
